refactor: influxDB 의존성 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   influxdb:
-    url: http://localhost:8086
+    url: http://3.37.4.250:8086
     username: root
     password: 1234
     database: optical_fiber
